--- a/client/nav.jade
+++ b/client/nav.jade
@@ -11,8 +11,8 @@ template(name='nav')
                 |Gold Run
             a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
                 i.large.users.icon
-            a.icon.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}" title='Staff')
-                i.large.briefcase.icon
+            //- a.icon.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}" title='Staff')
+            //-     i.large.briefcase.icon
             a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
                 i.large.clinic.medical.icon
         .right.menu
