--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -31,7 +31,7 @@ template(name='user_edit')
                         +text_edit key='address' label='Address' direct=true
                         +number_edit key='unit_number' label='Unit #' direct=true
                         +number_edit key='building_number' label='Building #' direct=true
-                        +text_edit key='email' label='Email' direct=true
+                        //- +text_edit key='email' label='Email' direct=true
                         +phone_edit key='phone' label='Phone' direct=true
                         +date_edit key='start_date' label='Start Date' direct=true
                         +date_edit key='expiration_date' label='Expiration Date' direct=true
