--- a/client/fields.jade
+++ b/client/fields.jade
@@ -125,7 +125,7 @@ template(name='image_edit')
 
 template(name='image_link_edit')
     .ui.labeled.icon.fluid.input
-        .ui.label image link
+        .ui.basic.label image link
         i.image.icon
         input.edit_image_link(type='link' value=field_value placeholder='image link' )
     if field_value
@@ -181,10 +181,10 @@ template(name='html_edit')
                     |#{this}
     .froala-container
         +froalaReactive getFEContext
-    +call_watson mode='html'
-    +tone mode='html'
-    if watson
-        +watson_view
+    //- +call_watson mode='html'
+    //- +tone mode='html'
+    //- if watson
+    //-     +watson_view
         
         
 template(name='html_view')
@@ -233,6 +233,8 @@ template(name='text_edit')
                 i.grey.icon(class=icon)
             if title
                 |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
         input.edit_text(type='text' value=field_value placeholder=placeholder)
@@ -247,8 +249,8 @@ template(name='text_view')
             | &nbsp;
             if title
                 |#{title}
-            else if title
-                |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
             else
@@ -259,9 +261,11 @@ template(name='phone_edit')
     .ui.labeled.fluid.input
         // if icon
         //     i.grey.icon(class=icon)
-        .ui.label 
+        .ui.basic.label 
             if title
                 |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
             else
@@ -276,6 +280,8 @@ template(name='phone_view')
             //     i.grey.icon(class=icon)
             if title
                 |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
             else
@@ -286,10 +292,15 @@ template(name='phone_view')
 
 template(name='number_edit')
     .ui.labeled.fluid.input
-        .ui.label
+        .ui.basic.label
             if icon
                 i.grey.icon(class=icon)
-            |#{title} #{key}
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            else
+                |#{key}
         input.edit_number(type='number' value=field_value placeholder=placeholder)
             
             
@@ -300,6 +311,8 @@ template(name='number_view')
             i.grey.icon(class=icon)
         if title
             |#{title}
+        else if label
+            |#{label}
         else
             |#{key}
         strong &nbsp; #{field_value}
@@ -307,9 +320,11 @@ template(name='number_view')
 
 template(name='date_edit')
     .ui.labeled.fluid.input
-        .ui.label 
+        .ui.basic.label 
             if title
                 |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
             else
@@ -378,11 +393,13 @@ template(name='datetime_view')
 
 template(name='array_edit')
     .ui.labeled.fluid.input
-        .ui.label
+        .ui.basic.label
             if icon
                 i.grey.icon(class=icon)
             if title
                 |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
         input.new_element(type='text' placeholder='+')
@@ -400,6 +417,8 @@ template(name='array_view')
             //     i.grey.icon(class=icon)
             if title
                 |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
             else
@@ -449,6 +468,8 @@ template(name='children_view')
         .title
             if title
                 |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
             else
@@ -488,7 +509,7 @@ template(name='child_view')
 
 template(name='youtube_edit')
     .ui.labeled.fluid.input
-        .ui.label 
+        .ui.basic.label 
             // if icon
             //     i.grey.icon(class=icon)
             |Youtube Id
@@ -545,7 +566,7 @@ template(name='single_doc_edit')
     .ui.small.inline.grey.header(title=key) 
         if icon
             i.grey.icon(class=icon)
-        |#{title}
+        |#{label}
     each choices
         .ui.small.button.select_choice(class=choice_class)
             if icon
@@ -558,7 +579,7 @@ template(name='multi_doc_edit')
     if icon
         i.grey.icon(class=icon)
     .ui.small.header(title=key)
-        |#{title}
+        |#{title} #{label}
     each choices
         .ui.button.select_choice(class=choice_class)
             if icon
@@ -594,7 +615,7 @@ template(name='multi_doc_view')
     .ui.header(title=key)
         |#{title}
     each field_value
-        .ui.label
+        .ui.basic.label
             |#{this}
     div
 
