--- a/client/nav.jade
+++ b/client/nav.jade
@@ -29,14 +29,14 @@ template(name='nav')
                     if is_admin
                         a.item(href='/admin' class="{{isActivePath '/admin'}}")
                             i.large.shield.icon
-                    if is_dev
-                        a.icon.item(href='/m/model' class="{{isActivePath '/m/model'}}")
-                            i.large.yin.yang.icon
+                    //- if is_dev
+                    //-     a.icon.item(href='/m/model' class="{{isActivePath '/m/model'}}")
+                    //-         i.large.yin.yang.icon
                     a.icon.item(href="/user/#{currentUser.username}/view" class="{{isActiveRoute regex='user_chat'}}")
                         if currentUser.image_id
                             img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
                         else
-                            i.user.icon
+                            i.user.large.icon
                         //- | #{currentUser.username}
                 if logging_out
                     .icon.item
