--- a/client/profile.jade
+++ b/client/profile.jade
@@ -1,93 +1,67 @@
-template(name='profile_layout')
-    .layout.context
-        +nav
-        with user_from_username_param
-            .ui.padded.stackable.grid
-                .row
-                    .four.wide.column.scrolling
-                        .ui.large.center.aligned.header
-                            | #{user.first_name}
-                            | #{user.last_name}
-                        .ui.center.aligned.header
-                            | @#{user.username}                        
-                        if image_id
-                            a.item(href="/user/#{user_from_username_param.username}/about")
-                                img.ui.medium.image(src="{{c.url image_id height=400 crop='limit'}}")
-                        // if current_user
-                        if is_admin
-                            .ui.vertical.fluid.menu
-                                a.item(href="/user/#{user_from_username_param.username}/edit")
-                                    i.settings.icon
-                                    | Settings
-                        .ui.vertical.large.fluid.menu
-                            a.item(href="/user/#{user_from_username_param.username}/about" class="{{isActiveRoute regex='user_about'}}")
-                                i.info.icon
-                                .content    
-                                    .header
-                                        |About
-                            a.item(href="/user/#{user_from_username_param.username}/connections" class="{{isActiveRoute regex='user_connections'}}")
-                                i.fork.icon
-                                .content    
-                                    .header
-                                        |Connections
-                            a.item(href="/user/#{user_from_username_param.username}/messages" class="{{isActiveRoute regex='user_messages'}}")
-                                i.mail.icon
-                                .content    
-                                    .header
-                                        |Messages
-                            a.item(href="/user/#{user_from_username_param.username}/notifications" class="{{isActiveRoute regex='user_notifications'}}")
-                                i.bullhorn.icon
-                                .content    
-                                    .header
-                                        |Notifications
-                            a.item(href="/user/#{user_from_username_param.username}/chat" class="{{isActiveRoute regex='user_chat'}}")
-                                i.chat.icon
-                                .content    
-                                    .header
-                                        |Chat
-                            a.item(href="/user/#{user_from_username_param.username}/stripe" class="{{isActiveRoute regex='user_stripe'}}")
-                                i.stripe.icon
-                                .content    
-                                    .header
-                                        |Stripe
-                            a.item(href="/user/#{user_from_username_param.username}/tags" class="{{isActiveRoute regex='user_tags'}}")
-                                i.tags.icon
-                                .content    
-                                    .header
-                                        |Tags
-                            a.item(href="/user/#{user_from_username_param.username}/contact" class="{{isActiveRoute regex='user_contact'}}")
-                                i.phone.icon
-                                .content    
-                                    .header
-                                        |Contact
-                        //- if user_models
-                        //-     .ui.vertical.large.fluid.menu
-                        //-         each user_models
-                        //-             a.item.set_delta_model(href="/user/#{user_from_username_param.username}/m/#{slug}" class="{{isActiveRoute regex=group}}")
-                        //-                 i.icon(class=icon)
-                        //-                 .content    
-                        //-                     .header
-                        //-                         |#{plural}
-                        if current_user
-                            .ui.vertical.fluid.menu
-                                a.item.logout(href='#')
-                                    i.sign.out.icon
-                                    |Log Out
-                        .ui.segment
-                            .ui.header
-                                |#{user.points} Following
-                            .ui.header
-                                |#{user.points} Followers
-                            .ui.header
-                                i.heartbeat.icon
-                                |#{user.points} Karma
-                            .ui.header 
-                                i.user.shield.icon
-                                |Roles
-                            each roles
-                                .ui.label #{this}
+template(name='profile')
+    with user_from_username_param
+    
+        .profile-banner-container
+            img.ui.fluid.rounded.image(src="{{c.url banner_image_id width=1000 height=300 crop='crop'}}")
+        .ui.padded.stackable.grid
+            .row
+                .four.wide.column.scrolling
+                    .ui.large.center.aligned.header
+                        | #{user.first_name}
+                        | #{user.last_name}
+                    .ui.center.aligned.header
+                        | @#{user.username}                        
+                    if image_id
+                        a.item(href="/user/#{user_from_username_param.username}/view")
+                            img.ui.medium.image(src="{{c.url image_id height=400 crop='limit'}}")
+                    // if current_user
+                    if is_admin
+                        .ui.vertical.fluid.menu
+                            a.item(href="/user/#{user_from_username_param.username}/edit")
+                                i.settings.icon
+                                | Settings
+                    if current_user
+                        .ui.vertical.fluid.menu
+                            a.item.logout(href='#')
+                                i.sign.out.icon
+                                |Log Out
+                    .ui.segment
+                    .ui.header
+                        |#{user.points} Following
+                    .ui.header
+                        |#{user.points} Followers
+                    .ui.header
+                        i.heartbeat.icon
+                        |#{user.points} Karma
+                    .ui.header 
+                        i.user.shield.icon
+                        |Roles
+                    each roles
+                        .ui.label #{this}
                     .twelve.wide.column.scrolling
-                        +yield
+                    +text_view key='first_name' label='First Name' direct=true
+                    +text_view key='last_name' label='Last Name' direct=true
+                    +text_view key='address' label='Address' direct=true
+                    +number_view key='unit_number' label='Unit #' direct=true
+                    +number_view key='building_number' label='Building #' direct=true
+                    //- +text_view key='email' label='Email' direct=true
+                    +phone_view key='phone' label='Phone' direct=true
+                    +date_view key='start_date' label='Start Date' direct=true
+                    +date_view key='expiration_date' label='Expiration Date' direct=true
+                
+                    each emails
+                        .ui.label #{address}
+            
+                .six.wide.column
+                    +textarea_view key='bio' label='Bio' collection='users' icon='align-left'
+                    +violations
+                    +user_bookmarks    
+                    +user_feed
+                .six.wide.column
+                    +user_rules_widget
+                    if current_user
+                        +role_switcher
+                    +user_tags
             
             
 template(name='user_chat')
@@ -100,33 +74,6 @@ template(name='user_section')
     // +Template.dynamic template=user_section_template
 
 template(name='user_about')
-    .profile-banner-container
-        img.ui.fluid.rounded.image(src="{{c.url banner_image_id width=1000 height=300 crop='crop'}}")
-
-    .ui.padded.stackable.grid
-        .eight.wide.column
-            +text_view key='first_name' label='First Name' direct=true
-            +text_view key='last_name' label='Last Name' direct=true
-            +text_view key='address' label='Address' direct=true
-            +number_view key='unit_number' label='Unit #' direct=true
-            +number_view key='building_number' label='Building #' direct=true
-            //- +text_view key='email' label='Email' direct=true
-            +phone_view key='phone' label='Phone' direct=true
-            +date_view key='start_date' label='Start Date' direct=true
-            +date_view key='expiration_date' label='Expiration Date' direct=true
-            
-            each emails
-                .ui.label #{address}
-    
-            +textarea_view key='bio' label='Bio' collection='users' icon='align-left'
-            +violations
-            +user_bookmarks    
-        .eight.wide.column
-            +user_feed
-            +user_rules_widget
-    if current_user
-        +role_switcher
-    +user_tags
     
 template(name='violations')
     .ui.header 
