--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -61,7 +61,7 @@ template(name='toggle_edit')
         i.pencil.icon
 
 template(name='user_list_info')
-    a.ui.button.item(href="/user/#{user._id}/about")
+    a.ui.button.item(href="/user/#{user._id}/view")
         img.ui.avatar.image(src=user.profile.profilePic title=name)
         |#{user.profile.name}
         +user_status user
@@ -121,7 +121,7 @@ template(name='big_user_card')
 
 
 template(name='user_info')
-    a.ui.button.item(href="/user/#{user.username}/about")
+    a.ui.button.item(href="/user/#{user.username}/view")
         if image_id
             img.ui.avatar.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
         |#{user.first_name} #{user.last_name}
@@ -134,7 +134,7 @@ template(name='role_editor')
         .ui.button #{this}
 
 template(name='author_info')
-    a.ui.button(href="/user/#{_id}/about") by #{author.profile.name}
+    a.ui.button(href="/user/#{_id}/view") by #{author.profile.name}
 
 template(name='creation_info')
     .uismall.grey.inline.header #{when}
