--- a/client/nav.jade
+++ b/client/nav.jade
@@ -18,14 +18,15 @@ template(name='nav')
         .right.menu
             if currentUser
                 unless logging_out
-                    //- .ui.simple.dropdown.icon.item(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
-                    //-     i.alarm.icon
-                    //-     | alerts
-                    //-     .menu
-                    //-         each notifications
-                    //-             .item #{text}
-                    //- a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath '/messages'}}")
-                    //-     i.large.mail.icon
+                    .ui.simple.dropdown.icon.item(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
+                        i.alarm.icon
+                        .menu
+                            each notifications
+                                .item #{text}
+                    a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath '/messages'}}")
+                        i.large.mail.icon
+                    a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
+                        i.large.chat.icon
                     if is_admin
                         a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
                             i.large.shield.icon
